# bsp_scheduling

./: .gitignore  CLAUDE.md  README.md  README_simulated_annealing.md  debug_actions.py  debug_busy_heft.py  debug_simulated_annealing.py  pyproject.toml  test_simulated_annealing.py  test_visualization.py
docs/: papp24.md
scripts/: playground.py
scripts/experiments/: wfcommons_patch.py
scripts/experiments/benchmark2/: README.md  analyze_datasets.py  benchmark_runner.py  dataset_generator.py  hardware_ipu.py  main.py  schedule_visualizer.py  schedulers.py  solver_statistics.py  visualizations.py
scripts/experiments/benchmarking/: dataset_statistics.py  main.py  postprocessing.py  prepare.py
scripts/experiments/figures/: main.py
scripts/experiments/parameter_sensitivity/: __init__.py  debug_schedules.py  main.py
scripts/experiments/simulatedannealing/: main.py  postprocessing.py
src/bsp_scheduling/: __init__.py  schedule.py
src/bsp_scheduling/conversion/: __init__.py  async_to_bsp.py  bsp_to_async.py
src/bsp_scheduling/misc/: __init__.py  saga_scheduler_wrapper.py
src/bsp_scheduling/optimization/: ilp_solvers.py  superstep_elimination.py
src/bsp_scheduling/schedulers/: __init__.py  bcsh.py
src/bsp_scheduling/task_graphs/: __init__.py  base.py  ccr_adjustment.py  spn_generator.py  wfcommons_generator.py
src/bsp_scheduling/utils/: visualization.py
src/saga_bsp/: __init__.py  schedule.py
src/saga_bsp/conversion/: async_to_bsp.py
src/saga_bsp/hardware/: __init__.py  graphcore.py
src/saga_bsp/misc/: __init__.py  heft_busy_communication.py  saga_scheduler_wrapper.py
src/saga_bsp/optimization/: __init__.py  hill_climbing.py  simulated_annealing.py  simulated_annealing_v2.py  superstep_elimination.py
src/saga_bsp/schedulers/: __init__.py  async_to_bsp_scheduler.py  bals.py  base.py  bcsh.py  fillin_append_bsp.py  fillin_split_bsp.py  hdagg.py  heft_bsp.py  list_bsp.py  msa_scheduler.py
src/saga_bsp/task_graphs/: __init__.py  ccr_adjustment.py  wfcommons_generator.py
src/saga_bsp/utils/: visualization.py
tests/: test_bspg_scheduler.py  test_coarsening.py  test_conversion.py  test_hdagg_scheduler.py  test_list_bsp_scheduler.py  test_papp_schedulers.py  test_simulated_annealing.py
(+12 files in other folders)
