[project]
name = "bsp_scheduling"
version = "0.0.1"
authors = [
  { name="Tim Noack", email="noack@esa.tu-darmstadt.de" },
]
description = "Schedulers for Bulk Synchronous Parallel (BSP) architectures"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "wfcommons==1.2",
    "anrg.saga==0.0.11",
    "pycapnp==2.2.1",
    "matplotlib",  # used by bsp_scheduling.utils.visualization
]
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
benchmark = [
    "rich",
    "pandas",
    "seaborn",
]
